// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds profile views fetches multiple profiles 1`] = `
Array [
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "its me!",
    "did": "user(0)",
    "displayName": "ali",
    "followersCount": 2,
    "followsCount": 3,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-b",
      },
    ],
    "postsCount": 4,
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(1)",
      "following": "record(0)",
      "knownFollowers": Object {
        "count": 1,
        "followers": Array [
          Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(2)",
            "handle": "carol.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "following": "record(2)",
              "muted": false,
            },
          },
        ],
      },
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "hi im bob label_me",
    "did": "user(3)",
    "displayName": "bobby",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 3,
    "viewer": Object {
      "blockedBy": false,
      "knownFollowers": Object {
        "count": 1,
        "followers": Array [
          Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": Array [
              Object {
                "cid": "cids(1)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(0)",
                "uri": "record(3)",
                "val": "self-label-a",
              },
              Object {
                "cid": "cids(1)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(0)",
                "uri": "record(3)",
                "val": "self-label-b",
              },
            ],
            "viewer": Object {
              "blockedBy": false,
              "followedBy": "record(1)",
              "following": "record(0)",
              "muted": false,
            },
          },
        ],
      },
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "did": "user(2)",
    "followersCount": 2,
    "followsCount": 1,
    "handle": "carol.test",
    "labels": Array [],
    "postsCount": 2,
    "viewer": Object {
      "blockedBy": false,
      "following": "record(2)",
      "knownFollowers": Object {
        "count": 1,
        "followers": Array [
          Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": Array [
              Object {
                "cid": "cids(1)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(0)",
                "uri": "record(3)",
                "val": "self-label-a",
              },
              Object {
                "cid": "cids(1)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(0)",
                "uri": "record(3)",
                "val": "self-label-b",
              },
            ],
            "viewer": Object {
              "blockedBy": false,
              "followedBy": "record(1)",
              "following": "record(0)",
              "muted": false,
            },
          },
        ],
      },
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "chat": Object {
        "allowIncoming": "none",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "did": "user(5)",
    "followersCount": 1,
    "followsCount": 1,
    "handle": "dan.test",
    "labels": Array [],
    "postsCount": 2,
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(4)",
      "knownFollowers": Object {
        "count": 1,
        "followers": Array [
          Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": Array [
              Object {
                "cid": "cids(1)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(0)",
                "uri": "record(3)",
                "val": "self-label-a",
              },
              Object {
                "cid": "cids(1)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(0)",
                "uri": "record(3)",
                "val": "self-label-b",
              },
            ],
            "viewer": Object {
              "blockedBy": false,
              "followedBy": "record(1)",
              "following": "record(0)",
              "muted": false,
            },
          },
        ],
      },
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "It's me, eve",
    "did": "user(6)",
    "displayName": "eve",
    "followersCount": 0,
    "followsCount": 0,
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 0,
    "pronouns": "They/them",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "It's me, frank",
    "did": "user(8)",
    "displayName": "frank",
    "followersCount": 0,
    "followsCount": 0,
    "handle": "frank.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 0,
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
    "website": "https://frank.example.com",
  },
]
`;

exports[`pds profile views fetches other's profile, with a follow 1`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(3)",
      "val": "self-label-a",
    },
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(3)",
      "val": "self-label-b",
    },
  ],
  "postsCount": 4,
  "viewer": Object {
    "blockedBy": false,
    "followedBy": "record(1)",
    "following": "record(0)",
    "knownFollowers": Object {
      "count": 1,
      "followers": Array [
        Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "following": "record(2)",
            "muted": false,
          },
        },
      ],
    },
    "muted": false,
  },
}
`;

exports[`pds profile views fetches other's profile, without a follow 1`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "chat": Object {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "labels": Array [],
  "postsCount": 2,
  "viewer": Object {
    "blockedBy": false,
    "followedBy": "record(0)",
    "knownFollowers": Object {
      "count": 1,
      "followers": Array [
        Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(3)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(3)",
              "val": "self-label-b",
            },
          ],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(2)",
            "following": "record(1)",
            "muted": false,
          },
        },
      ],
    },
    "muted": false,
  },
}
`;

exports[`pds profile views fetches own profile 1`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(4)",
      "val": "self-label-a",
    },
    Object {
      "cid": "cids(1)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(0)",
      "uri": "record(4)",
      "val": "self-label-b",
    },
  ],
  "postsCount": 4,
  "viewer": Object {
    "blockedBy": false,
    "knownFollowers": Object {
      "count": 2,
      "followers": Array [
        Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(1)",
            "following": "record(0)",
            "muted": false,
          },
        },
        Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(4)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(3)",
            "following": "record(2)",
            "muted": false,
          },
        },
      ],
    },
    "muted": false,
  },
}
`;

exports[`pds profile views germ returns germ record if it does exist 1`] = `
Object {
  "messageMeUrl": "https://chat.example.com/start-conversation",
  "showButtonTo": "everyone",
}
`;

exports[`pds profile views presents avatars & banners 1`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
  "banner": "https://bsky.public.url/img/banner/plain/user(1)/cids(1)@jpeg",
  "description": "new descript",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "blockedBy": false,
    "knownFollowers": Object {
      "count": 2,
      "followers": Array [
        Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(1)",
            "following": "record(0)",
            "muted": false,
          },
        },
        Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(4)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(3)",
            "following": "record(2)",
            "muted": false,
          },
        },
      ],
    },
    "muted": false,
  },
}
`;

exports[`pds profile views returns empty profile for actor that exists but has no profile 1`] = `
Object {
  "profiles": Array [
    Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
        "feedgens": 0,
        "labeler": false,
        "lists": 0,
        "starterPacks": 0,
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "followersCount": 2,
      "followsCount": 2,
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "postsCount": 3,
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "knownFollowers": Object {
          "count": 1,
          "followers": Array [
            Object {
              "associated": Object {
                "activitySubscription": Object {
                  "allowSubscriptions": "followers",
                },
                "chat": Object {
                  "allowIncoming": "none",
                },
              },
              "did": "user(2)",
              "handle": "dan.test",
              "labels": Array [],
              "viewer": Object {
                "blockedBy": false,
                "following": "record(2)",
                "muted": false,
              },
            },
          ],
        },
        "muted": false,
      },
    },
    Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
        "feedgens": 0,
        "labeler": false,
        "lists": 0,
        "starterPacks": 0,
      },
      "did": "user(3)",
      "followersCount": 0,
      "followsCount": 0,
      "handle": "noprofile.test",
      "labels": Array [],
      "postsCount": 0,
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
}
`;

exports[`pds profile views returns empty profile if actor exists but has no profile 1`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "noprofile.test",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`pds profile views status returns active status when within the duration 1`] = `
Object {
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.external#view",
    "external": Object {
      "description": "testLink",
      "title": "TestImage",
      "uri": "https://example.com",
    },
  },
  "expiresAt": "1970-01-01T00:00:00.000Z",
  "isActive": true,
  "isDisabled": false,
  "record": Object {
    "$type": "app.bsky.actor.status",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "durationMinutes": 10,
    "embed": Object {
      "$type": "app.bsky.embed.external",
      "external": Object {
        "description": "testLink",
        "title": "TestImage",
        "uri": "https://example.com",
      },
    },
    "status": "app.bsky.actor.status#live",
  },
  "status": "app.bsky.actor.status#live",
  "uri": "record(0)",
}
`;

exports[`pds profile views status when outside the duration returns inactive status 1`] = `
Object {
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.external#view",
    "external": Object {
      "description": "testLink",
      "title": "TestImage",
      "uri": "https://example.com",
    },
  },
  "expiresAt": "1970-01-01T00:00:00.000Z",
  "isActive": false,
  "isDisabled": false,
  "record": Object {
    "$type": "app.bsky.actor.status",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "durationMinutes": 10,
    "embed": Object {
      "$type": "app.bsky.embed.external",
      "external": Object {
        "description": "testLink",
        "title": "TestImage",
        "uri": "https://example.com",
      },
    },
    "status": "app.bsky.actor.status#live",
  },
  "status": "app.bsky.actor.status#live",
  "uri": "record(0)",
}
`;

exports[`pds profile views status when taken down it returns the live status with isDisabled=true for status owner 1`] = `
Object {
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.external#view",
    "external": Object {
      "description": "testLink",
      "title": "TestImage",
      "uri": "https://example.com",
    },
  },
  "expiresAt": "1970-01-01T00:00:00.000Z",
  "isActive": true,
  "isDisabled": true,
  "record": Object {
    "$type": "app.bsky.actor.status",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "durationMinutes": 10,
    "embed": Object {
      "$type": "app.bsky.embed.external",
      "external": Object {
        "description": "testLink",
        "title": "TestImage",
        "uri": "https://example.com",
      },
    },
    "status": "app.bsky.actor.status#live",
  },
  "status": "app.bsky.actor.status#live",
  "uri": "record(0)",
}
`;
